--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Restaurant Check</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div id="restaurantList">
+        <!-- Restaurants will be added here by JavaScript -->
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
