--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="restaurantList">
-        <!-- Restaurants will be added here by JavaScript -->
+    <div id="restaurantContainer">
+        <!-- Restaurant info will be dynamically inserted here -->
     </div>
 
     <script src="script.js"></script>
